10-ECR-Elastic-Container-Registry-and-EKS/01-ECR-Nginx-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapp-ecr
  labels:
    app: kubeapp-ecr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubeapp-ecr
  template:
    metadata:
      labels:
        app: kubeapp-ecr
    spec:
      containers:
        - name: kubeapp-ecr
          image: 701162217244.dkr.ecr.ap-southeast-1.amazonaws.com/aws-ecr-kubenginx:1.0.0
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
          ports:
            - containerPort: 80
